--- a/package.json
+++ b/package.json
@@ -13,56 +13,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
+    "@angular/common": "^2.0.0-rc.5",
+    "@angular/compiler": "^2.0.0-rc.5",
+    "@angular/core": "^2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "^2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
     "es6-shim": "0.35.1",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
-    "zone.js": "0.6.12",
-    "express": "~3.4.0",
-    "express3-handlebars": "0.4.x"
+    "express": "~4.14.0",
+    "express3-handlebars": "0.5.x",
+    "reflect-metadata": "0.1.8",
+    "rxjs": "5.0.0-beta.11",
+    "systemjs": "0.19.37",
+    "zone.js": "0.6.17"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.10",
-    "codelyzer": "0.0.20",
-    "ember-cli-inject-live-reload": "1.4.0",
+    "codelyzer": "0.0.28",
+    "ember-cli-inject-live-reload": "1.4.1",
     "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-jasmine": "0.3.8",
-    "protractor": "3.3.0",
-    "ts-node": "0.5.5",
-    "tslint": "3.11.0",
+    "jasmine-spec-reporter": "2.7.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-jasmine": "1.0.2",
+    "protractor": "4.0.4",
+    "ts-node": "1.3.0",
+    "tslint": "3.15.1",
     "typescript": "1.8.10",
-    "typings": "1.3.1",
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
+    "typings": "1.3.3",
+    "grunt": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-uglify": "~2.0.0",
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-sass": "~1.0.0",
+    "grunt-contrib-cssmin": "~1.0.1",
+    "grunt-contrib-connect": "~1.0.2",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-htmlmin": "~2.0.0",
+    "grunt-contrib-imagemin": "~1.0.1",
+    "grunt-contrib-watch": "~1.0.0",
     "grunt-open": "~0.2.2",
-    "grunt-express-server": "~0.4.2",
+    "grunt-express-server": "~0.5.3",
     "grunt-rev": "~0.1.0",
-    "grunt-usemin": "~0.1.10",
-    "grunt-svgmin": "~0.2.0",
-    "grunt-concurrent": "~0.3.0",
-    "load-grunt-tasks": "~0.1.0",
-    "time-grunt": "~0.1.1"
-
+    "grunt-usemin": "~3.1.1",
+    "grunt-svgmin": "~3.3.0",
+    "grunt-concurrent": "~2.3.1",
+    "load-grunt-tasks": "~3.5.2",
+    "time-grunt": "~1.4.0"
   }
 }
